src/com/fanhl/test/s5/StringConvenience.groovy
str ="It's a rain day in Seattle"
println str
println str-'rain'

//'held'.upto('helm'){println it}//error
for (str in 'held'..'helm') {print "$str "}